Ajaxifyed update task.

--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Task Dog</h1>
+<h1>Things To Do:</h1>
 <%= link_to "New Task", new_task_path, id: "new_link", remote: true %>
 <h2>Incomplete Tasks</h2>
 <div class="tasks" id="incomplete_tasks">
